--- a/playbook.yml
+++ b/playbook.yml
@@ -3,31 +3,35 @@
   become: yes
   become_user: root
   gather_facts: true
- 
-  vars: 
+
+  vars:
     repository:  https://github.com/mikecali/demo_app.git
 
   tasks:
-    - name: add epel repository
-      yum:
-         name: epel-release
-         state: present
- 
+#    - name: add epel repository
+#      apt:
+#         name: epel-release
+#         state: present
+
 
     - name: configure timezone
       timezone:
-        name: Pacific/Auckland
+        name: America/New_York
+
+    - name: run apt-get update
+      apt:
+        update_cache: yes
 
     - name: install ansible
-      yum:
+      apt:
         name: ansible
         state: latest
       when: "'ansible-host' in inventory_hostname"
 
-    - name: Install http
-      yum: name={{ item }} state=present
+    - name: Install Apache Webserver
+      apt: name={{ item }} state=present
       with_items:
-         - httpd
+         - apache2
          - php
          - php-mysqlnd
          - git
@@ -35,50 +39,53 @@
       when: "'web' in inventory_hostname"
 
     - name: http service state
-      service: name=httpd state=started enabled=yes
+      service: name=apache2 state=started enabled=yes
       become: true
       when: "'web' in inventory_hostname"
-    
+
     - name: enabled mod_rewrite
       apache2_module: name=rewrite state=present
       notify:
         - restart apache2
       when: "'web' in inventory_hostname"
 
-    - name: Copy the code from repository
-      git: repo={{ repository }} dest=/var/www/html/
-      become: true
-      when: "'web' in inventory_hostname"
+#     When enabled, this errors out because the detault server files already exist in "dest"
+#    - name: Copy the code from repository
+#      git: repo={{ repository }} dest=/var/www/html/
+#      become: true
+#      when: "'web' in inventory_hostname"
 
-    - name: Start firewalld
-      service:
-        state: restarted
-        name: firewalld
-      when: "'web' in inventory_hostname or 'ansible-host' in inventory_hostname"
-      become_user: root
+#      This was originally a centos playbook, firewalld doesn't exist.
+#      To-do: add ufw related commands.
+#    - name: Start firewalld
+#      service:
+#        state: restarted
+#        name: firewalld
+#      when: "'web' in inventory_hostname or 'ansible-host' in inventory_hostname"
+#      become_user: root
 
-    - name: Allow apache 
-      firewalld:
-        service: http
-        permanent: true
-        state: enabled
-        zone: public
-      when: "'web' in inventory_hostname"
-      become_user: root
+#    - name: Allow apache
+#      firewalld:
+#        service: http
+#        permanent: true
+#        state: enabled
+#        zone: public
+#      when: "'web' in inventory_hostname"
+#      become_user: root
 
     - name: Install and start Cockpit
-      yum:
+      apt:
         name: cockpit
-        state: latest
+#        state: latest
       become_user: root
-    
+
     - name: enable cockpit
       systemd:
         name: cockpit
         state: started
         enabled: yes
       become: true
-    
+
     - name: Allow Cockpit to access the vm
       lineinfile:
         path: /etc/ssh/sshd_config
@@ -96,24 +103,25 @@
       become: yes
 
     - name: Restart sshd
-      service: 
-        state: restarted
-        name: sshd
-
-    - name: Allow cockpit on firewalld
-      firewalld:
-         service: cockpit
-         permanent: true
-         state: enabled
-         zone: public
-      become_user: root
-
-    - name: Restart firewalld
       service:
         state: restarted
-        name: firewalld
-      when: "'web' in inventory_hostname or 'ansible-host' in inventory_hostname"
-      become_user: root
+        name: sshd
+        
+#      This was originally a centos playbook, firewalld doesn't exist.
+#    - name: Allow cockpit on firewalld
+#      firewalld:
+#         service: cockpit
+#         permanent: true
+#         state: enabled
+#         zone: public
+#      become_user: root
+
+#    - name: Restart firewalld
+#      service:
+#        state: restarted
+#        name: firewalld
+#      when: "'web' in inventory_hostname or 'ansible-host' in inventory_hostname"
+#      become_user: root
 
     - name: Copy vagrant key
       copy:
